--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,13 @@ PORT=5000
 MONGODB_URI=mongodb://localhost:27017/project-management-tool
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
+
+# Email Configuration
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=your_username
+MAIL_PASSWORD=your_password
+MAIL_ENCRYPTION=false
+EMAIL_FROM=noreply@example.com
+EMAIL_FROM_NAME="Project Management App"
+FRONTEND_URL=http://localhost:5173
