--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,17 @@
+# Backend Environment Variables
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/project-management-tool
-JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
+MONGODB_URI=mongodb://localhost:27017/project-management-tool
+JWT_SECRET=your_jwt_secret_here
+FRONTEND_URL=http://localhost:3000
 
-# Email Configuration
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=your_username
-MAIL_PASSWORD=your_password
-MAIL_ENCRYPTION=false
-EMAIL_FROM=noreply@example.com
-EMAIL_FROM_NAME="Project Management App"
-FRONTEND_URL=http://localhost:5173
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Email Configuration (Nodemailer)
+EMAIL_SERVICE=gmail
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+EMAIL_FROM=noreply@yourdomain.com
