--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,9 @@ CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
 # Email Configuration (Nodemailer)
+# If using Gmail, set EMAIL_SERVICE=gmail and use an App Password for EMAIL_PASS
 EMAIL_SERVICE=gmail
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_app_password
 EMAIL_FROM=noreply@yourdomain.com
+EMAIL_FROM_NAME="Project Management Tool"
