--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,9 +11,17 @@ CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
 # Email Configuration (Nodemailer)
-# If using Gmail, set EMAIL_SERVICE=gmail and use an App Password for EMAIL_PASS
+# Option 1: Using a Service (e.g., Gmail)
 EMAIL_SERVICE=gmail
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_app_password
+
+# Option 2: Using Manual SMTP (Recommended for production hosts like Render)
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USER=your_smtp_user
+MAIL_PASSWORD=your_smtp_password
+MAIL_ENCRYPTION=false
+
 EMAIL_FROM=noreply@yourdomain.com
 EMAIL_FROM_NAME="Project Management Tool"
